[package]
name = "halberd"
version = "0.2.2"
edition = "2018"
authors = [
	"o108minmin <o108minmin@gmail.com>",
]
description = "Generate Text To Speech Software Subtitle"
repository = "https://github.com/o108minmin/halberd"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "*"
hound = "*"
chrono = "*"
clap = "3.0.6"
log = "0.4.14"
env_logger = "0.8.4"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
tempfile = "3"
