[package]
name = "halberd"
version = "1.4.0"
edition = "2018"
authors = [
	"o108minmin <o108minmin@gmail.com>",
]
description = "Generate Text To Speech Software Subtitle"
repository = "https://github.com/o108minmin/halberd"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "*"
hound = "*"
clap = "3.1.9"
log = "0.4.16"
env_logger = "0.9.0"
xml-rs = "0.8"
ulid = "0.5.0"
time = {version = "0.3.9", features = ["macros", "formatting"]}

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3"
