[package]
name = "halberdcli"
version = "1.5.5"
edition = "2021"
authors = [
	"o108minmin <o108minmin@gmail.com>",
]
description = "Generate Text To Speech Software Subtitle"
repository = "https://github.com/o108minmin/halberd"

[dependencies]
clap = "4.0.8"
log = "0.4.16"
env_logger = "0.9.0"
halberd_core = {path = "../halberd_core"}

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3"
