[package]
name = "halberdcli"
version = "2.1.0"
edition = "2021"
authors = [
	"o108minmin <o108minmin@gmail.com>",
]
description = "Generate Text To Speech Software Subtitle"
repository = "https://github.com/o108minmin/halberd"

[dependencies]
clap = "4.0.8"
log = "0.4.16"
env_logger = "0.10.0"
halberd_core = {path = "../halberd_core"}

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "3.0.2"
tempfile = "3"
