[package]
name = "halberd_core"
version = "2.0.4"
edition = "2021"
authors = [
	"o108minmin <o108minmin@gmail.com>",
]
description = "Generate Text To Speech Software Subtitle"
repository = "https://github.com/o108minmin/halberd"

[dependencies]
encoding_rs = "0.8.31"
hound = "3.4.0"
log = "0.4.16"
xml-rs = "0.8"
time = {version = "0.3.15", features = ["macros", "formatting", "local-offset"]}

[dev-dependencies]
tempfile = "3"
